# otb

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TODO.md
otb/: CMakeLists.txt  binding_manager.cpp  binding_manager.hpp  buffer_manager.hpp  configuration.cpp  configuration.hpp  embree.cpp  embree.hpp  image.hpp  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.hpp  imgui_sdl_bridge.cpp  imgui_sdl_bridge.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_data_manager.cpp  mesh_data_manager.hpp  occlusion.cpp  occlusion.hpp  postprocess.cpp  postprocess.hpp  program.hpp  rasterizer.cpp  rasterizer.hpp  render_manager.cpp  render_manager.hpp  targa.c  utils.cpp  utils.hpp
resources/: config.json
resources/shaders/: base.fs  base.vs  occlusion.vs  wireframe.fs  wireframe.gs  wireframe.vs
